resources/assets/sass/_film.scss
.single-listing--inner {
  height: 100%;
}


.single-listing--text {
  background-color: white;
  @media screen and (orientation: portrait) {
    margin-top: $banner-image-height;
    position: relative;
  }
  @media screen and (orientation: landscape) {
    display: flex;
    flex-direction: column;
    flex: 1 1 auto;
    overflow: hidden;
  }
}

.single-listing--image {
  background-color: $off-white;
  @media screen and (orientation: landscape) {
    flex: 0 0 50%;
    order: 2;
  }
  @media screen and (orientation: portrait) {
    height: $banner-image-height;
    position: fixed;
    top: 2.5 * $base-spacing;
    left: 0;
    right: 0;
  }

  padding: 0;
  position: relative;
  img {
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
    transition: opacity 1s $base-timing;
    &.loading {
      opacity: 0;
      transition: opacity 0ms;
    }
  }
}


.single-listing--content {
  padding-bottom: 1.5 * $base-spacing;
  @media screen and (orientation: landscape) {
    flex: 1 1 auto;
    overflow: auto;
    padding-bottom: 0;
  }
}

.single-listing--description {
  font-size: modular-scale(-1);
  & > *:last-child {
    margin-bottom: 0;
  }
  margin: $small-spacing;
  @media screen and (orientation: portrait) {
    margin: $base-spacing;
  }
  @media screen and (min-width: $large-screen) {
    margin: $base-spacing 2 * $base-spacing;
  }
  @media screen and (min-width: $xl-screen) {
    margin: $base-spacing 3 * $base-spacing;
  }
}

.single-listing--header {
  padding: $small-spacing;
  background-color: #fff;
  border-bottom: $base-border;
  padding-bottom: $base-spacing;
  @media screen and (orientation: portrait) {
    padding: $base-spacing;
    position: sticky;
    top: 2.5 * $base-spacing;
  }
  @media screen and (min-width: $large-screen) {
    padding: $base-spacing 2 * $base-spacing;
  }
  @media screen and (min-width: $xl-screen) {
    padding: 2 * $base-spacing 3 * $base-spacing $base-spacing;
  }
}

.single-listing--meta {
  font-weight: 400;
  font-size: modular-scale(-1);
}

.single-listing--title {
  font-size: modular-scale(4);
  margin-bottom: $small-spacing/2;
}

.single-listing--subtitle {
  font-size: modular-scale(2);
  font-weight: 500;
  color: $medium-gray;
  line-height: $heading-line-height;
  margin-bottom: $small-spacing;
}

.single-listing--screenings {
  border-bottom: $base-border;
  font-size: modular-scale(-1);
  padding: 0 $small-spacing;
  position: relative;
  @media screen and (orientation: portrait) {
    padding: 0 $base-spacing;
  }
  @media screen and (min-width: $large-screen) {
    padding: 0 2 * $base-spacing;
  }
  @media screen and (min-width: $xl-screen) {
    padding: 0 3 * $base-spacing;
  }
  td {
    border-bottom: $light-border;
    padding: $small-spacing/2 0;
  }
  table {
    margin: 0;
    table-layout: auto;
    width: 100%;
    margin-bottom: $small-spacing;
    td:last-child {
      // text-align: right;
    }
    td:first-child {
      font-weight: 700;
      padding-right: $base-spacing;
      text-transform: uppercase;
      font-size: modular-scale(-1);
      width: 1px;
      white-space: nowrap;
    }
    tr:last-child td {
      // border-bottom: none;
    }
  }
  .label {
    font-size: modular-scale(-1);
  }
  .initial-rows {
    tr:first-child td {
      border-top: $light-border;
    }
  }
  .hidden-rows {
    display: none;
    tr:first-child td {
      border-top: $light-border;
    }
    &.shown {
      display: table-row-group;
    }
  }

}

.listings--screenings--book {
  text-align: center;
  display: inline-block;
  margin-left: $small-spacing/2;
  @media screen and (orientation: portrait) {
    margin-left: $small-spacing/4;
  }
}

.single-listing--screenings--show-all {
  display: block;
  font-weight: 500;
  letter-spacing: .05rem;
  margin: $small-spacing 0 $base-spacing;
}

.single-listing--screenings--header {
  margin-top: $base-spacing;
  margin-bottom: $small-spacing;
}

.single-listing--footer {
  padding: $small-spacing;
  border-top: $base-border;
  font-size: modular-scale(-1);
  table, td {
    table-layout: auto;
    margin: 0;
    padding: 0;
  }
  td {
    // padding: 0;
    vertical-align: top;
    border-bottom: $light-border;
    padding: $small-spacing/2 0;

    &:first-child {
      font-weight: 700;
      padding-right: $base-spacing;
    }
    &:last-child {
      width: 80%
    }
  }
  tr:last-child td {
    border-bottom: none;
  }
  @media screen and (orientation: landscape) {
    flex: 0 0 auto;
  }
  @media screen and (orientation: portrait) {
    padding: $small-spacing $base-spacing 0;
  }
  @media screen and (min-width: $large-screen) {
    padding: $small-spacing 2 * $base-spacing 0;
  }
  @media screen and (min-width: $xl-screen) {
    padding: $small-spacing 3 * $base-spacing 0;
  }
}

